--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0-0",
   "description": "walk paths efficiently",
   "author": "Isaac Z. Schlueter <i@izs.me> (https://blog.izs.me)",
-  "main": "./dist/cjs/index-cjs.js",
+  "main": "./dist/cjs/index.js",
   "module": "./dist/mjs/index.js",
   "exports": {
     ".": {
@@ -12,8 +12,8 @@
         "default": "./dist/mjs/index.js"
       },
       "require": {
-        "types": "./dist/cjs/index-cjs.d.ts",
-        "default": "./dist/cjs/index-cjs.js"
+        "types": "./dist/cjs/index.d.ts",
+        "default": "./dist/cjs/index.js"
       }
     }
   },
@@ -75,5 +75,8 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/isaacs/path-walker"
+  },
+  "dependencies": {
+    "pointer-set": "^1.1.0"
   }
 }
