--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     strategy:
       matrix:
-        node-version: [v14.x, v16.x, v18.x, v19.x, v20.x]
+        node-version: [v14.x, v16.x, v18.x, v19.x]
         platform:
         - os: ubuntu-latest
           shell: bash
