--- a/package.json
+++ b/package.json
@@ -77,6 +77,6 @@
     "url": "git+https://github.com/isaacs/path-walker"
   },
   "dependencies": {
-    "pointer-set": "^1.1.0"
+    "lru-cache": "^7.14.1"
   }
 }
