--- a/package.json
+++ b/package.json
@@ -60,7 +60,9 @@
     "@types/tap": "^15.0.7",
     "c8": "^7.12.0",
     "eslint-config-prettier": "^8.6.0",
+    "mkdirp": "^2.1.3",
     "prettier": "^2.8.3",
+    "rimraf": "^4.1.2",
     "tap": "^16.3.4",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.24",
@@ -77,6 +79,7 @@
     "url": "git+https://github.com/isaacs/path-walker"
   },
   "dependencies": {
-    "lru-cache": "^7.14.1"
+    "lru-cache": "^7.14.1",
+    "promise-call-limit": "^1.0.1"
   }
 }
