--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "ts": false
   },
   "devDependencies": {
+    "@nodelib/fs.walk": "^1.2.8",
     "@types/node": "^18.11.18",
     "@types/tap": "^15.0.7",
     "c8": "^7.12.0",
