--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "url": "git+https://github.com/isaacs/path-walker"
   },
   "dependencies": {
-    "lru-cache": "^7.14.1"
+    "lru-cache": "^7.14.1",
+    "minipass": "^4.0.1"
   }
 }
