--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "path-walker",
+  "name": "path-scurry",
   "version": "0.0.0",
-  "description": "walk paths efficiently",
+  "description": "walk paths fast and efficiently",
   "author": "Isaac Z. Schlueter <i@izs.me> (https://blog.izs.me)",
   "main": "./dist/cjs/index.js",
   "module": "./dist/mjs/index.js",
