--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -38,6 +38,8 @@ jobs:
         run: npm install
       - name: Generate typedocs
         run: npm run typedoc
+      - name: Run benchmarks
+        run: npm run bench &> ./docs/benchmarks.txt
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
