--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Generate typedocs
         run: npm run typedoc
       - name: Run benchmarks
-        run: npm run bench &> ./docs/benchmarks.txt
+        run: npm run bench 2>&1 | tee ./docs/benchmarks.txt
       - name: Setup Pages
         uses: actions/configure-pages@v3
       - name: Upload artifact
