--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "typescript": "^4.9.4"
   },
   "engines": {
-    "node": ">=14"
+    "node": ">=16 || 14 >=14.17"
   },
   "funding": {
     "url": "https://github.com/sponsors/isaacs"
