--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "url": "git+https://github.com/isaacs/path-scurry"
   },
   "dependencies": {
-    "lru-cache": "^9.1.1",
+    "lru-cache": "^9.1.1 || ^10.0.0",
     "minipass": "^5.0.0 || ^6.0.2"
   }
 }
