--- a/package.json
+++ b/package.json
@@ -82,6 +82,6 @@
   },
   "dependencies": {
     "lru-cache": "^9.1.1 || ^10.0.0",
-    "minipass": "^5.0.0 || ^6.0.2"
+    "minipass": "^5.0.0 || ^6.0.2 || ^7.0.0"
   }
 }
