--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "bench": "bash ./scripts/bench.sh"
   },
   "prettier": {
+    "experimentalTernaries": true,
     "semi": false,
     "printWidth": 75,
     "tabWidth": 2,
@@ -52,7 +53,7 @@
     "c8": "^7.12.0",
     "eslint-config-prettier": "^8.6.0",
     "mkdirp": "^3.0.0",
-    "prettier": "^2.8.3",
+    "prettier": "^3.2.5",
     "rimraf": "^5.0.1",
     "tap": "^18.7.2",
     "ts-node": "^10.9.2",
