--- a/package.json
+++ b/package.json
@@ -61,6 +61,9 @@
     "typedoc": "^0.25.12",
     "typescript": "^5.4.3"
   },
+  "tap": {
+    "typecheck": true
+  },
   "engines": {
     "node": ">=16 || 14 >=14.17"
   },
