expand engines to include node 18

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,16 +1,18 @@
-/.tshy
-/package.json
-/test/fixtures
-/package-lock.json
-/scripts
-!/scripts/benchmark*.ts
 /node_modules
+/tsconfig.json
+/package-lock.json
+/package.json
+/LICENSE.md
 /example
 /.github
 /dist
-.env
+/.env
 /tap-snapshots
 /.nyc_output
 /coverage
 /benchmark
-/LICENSE.md
+/.tap
+/test/fixture
+/test/fixtures
+/.tshy
+/docs
