--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,35 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches: ["main"]
+  pull_request_target:
+    paths:
+      - 'src/**'
+      - 'test/**'
+      - '*.json'
+      - '*.js'
+      - '*.ts'
+      - 'lib/**'
+      - 'scripts/**'
+      - '.github/workflows/ci.yml'
+      - 'package.json'
+  workflow_dispatch:
+
+permissions:
+  contents: read
 
 jobs:
   build:
     strategy:
       matrix:
-        node-version: [v18.x, v20.x, v22.x]
+        node-version: [18.x, 20.x, 22.x, 24.x, 25.x]
         platform:
         - os: ubuntu-latest
           shell: bash
         - os: macos-latest
+          shell: bash
+        - os: windows-latest
           shell: bash
         - os: windows-latest
           shell: powershell
@@ -23,10 +42,10 @@ jobs:
 
     steps:
       - name: Checkout Repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v6
 
       - name: Use Nodejs ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v6
         with:
           node-version: ${{ matrix.node-version }}
 
