--- a/package.json
+++ b/package.json
@@ -36,16 +36,15 @@
     "bench": "bash ./scripts/bench.sh"
   },
   "devDependencies": {
-    "@nodelib/fs.walk": "^2.0.0",
+    "@nodelib/fs.walk": "^3.0.1",
     "@types/node": "^25.3.0",
     "mkdirp": "^3.0.0",
     "prettier": "^3.3.2",
-    "rimraf": "^5.0.8",
+    "rimraf": "^6.1.3",
     "tap": "^21.6.1",
     "ts-node": "^10.9.2",
-    "tshy": "^2.0.1",
-    "typedoc": "^0.26.3",
-    "typescript": "^5.5.3"
+    "tshy": "^3.3.2",
+    "typedoc": "^0.28.17"
   },
   "engines": {
     "node": "18 || 20 || >=22"
